# vk-gtk

./: .gitignore  CMakeLists.txt  README.md  create-deb.sh  prepare.sh
DEBIAN/: changelog  control  postrm
data/: CMakeLists.txt  vk-gtk.desktop  vk-gtk.glade
gui/: .gitignore  CMakeLists.txt  auth.cxx  auth.hxx  browsers.cxx  browsers.hxx  gst_sound.cxx  gst_sound.hxx  main.cxx  messages_checker.cxx  messages_checker.hxx  notifier.cxx  notifier.hxx  settings_window.cxx  settings_window.hxx  tray.cxx  tray.hxx  tray_popup.cxx  tray_popup.hxx  utils.cxx  utils.hxx  widgets.cxx  widgets.hxx
libvk/: .gitignore  CMakeLists.txt  vk_app.cxx  vk_app.hxx  vk_commands.cxx  vk_commands.hxx  vk_common.hxx  vk_http.cxx  vk_http.hxx  vk_session.cxx  vk_session.hxx
po/: Makefile  ru.po
po/ru/: vk-gtk.mo
tests/: .gitignore  CMakeLists.txt  tests.cxx
